[gd_scene load_steps=10 format=3 uid="uid://ch8olpu02xgxp"]

[ext_resource type="Script" uid="uid://dskqtfyun35f0" path="res://player_start.gd" id="1_8cala"]
[ext_resource type="Theme" uid="uid://bjowy0ujxwwvw" path="res://DefaultTheme.tres" id="1_p633n"]
[ext_resource type="Texture2D" uid="uid://cd8035qoqv8o0" path="res://art/blue_piece.png" id="2_4b01o"]
[ext_resource type="Texture2D" uid="uid://cg8cg6q527230" path="res://art/pink_piece.png" id="3_8cala"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cala"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0ale"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lbtxa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8sdfe"]

[sub_resource type="Theme" id="Theme_no7s4"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_8cala")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_q0ale")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_lbtxa")
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_8sdfe")

[node name="PlayerStart" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -920.0
offset_bottom = -384.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p633n")
script = ExtResource("1_8cala")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 356.0
offset_bottom = 336.0
theme = ExtResource("1_p633n")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_p633n")

[node name="MarginContainerTitle" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="LabelTitle" type="Label" parent="PanelContainer/VBoxContainer/MarginContainerTitle"]
layout_mode = 2
text = "Player Selection"
horizontal_alignment = 1

[node name="MarginContainerType" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainerType"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer"]
layout_mode = 2
text = "Select Icon"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ButtonPlayerType01" type="Button" parent="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_p633n")
text = "Blue"
icon = ExtResource("2_4b01o")

[node name="ButtonPlayerType2" type="Button" parent="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_p633n")
text = "Pink"
icon = ExtResource("3_8cala")

[node name="LabelPlayerSelected" type="Label" parent="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer"]
layout_mode = 2
text = "Select an Icon"

[node name="MarginContainerLoc" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainerLoc"]
layout_mode = 2

[node name="LabelStartLoc" type="Label" parent="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2"]
layout_mode = 2
text = "Select Start Location"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="ButtonLoc1" type="Button" parent="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_p633n")
text = "1"

[node name="ButtonLoc8" type="Button" parent="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_p633n")
text = "8"

[node name="LabelStartLocSelected" type="Label" parent="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2"]
layout_mode = 2
text = "Select a Location"

[node name="MarginContainerLocation" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/MarginContainerLocation"]
layout_mode = 2
theme = SubResource("Theme_no7s4")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainerLocation/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainerDone" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="ButtonDone" type="Button" parent="PanelContainer/VBoxContainer/MarginContainerDone"]
layout_mode = 2
theme = ExtResource("1_p633n")
disabled = true
text = "Done"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer/MarginContainer/VBoxContainer/ButtonPlayerType01" to="." method="_on_button_player_type_01_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainerType/HBoxContainer/MarginContainer/VBoxContainer/ButtonPlayerType2" to="." method="_on_button_player_type_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2/MarginContainer/VBoxContainer/ButtonLoc1" to="." method="_on_button_loc_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainerLoc/HBoxContainer2/MarginContainer/VBoxContainer/ButtonLoc8" to="." method="_on_button_loc_8_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainerDone/ButtonDone" to="." method="_on_button_done_pressed"]
